# internal-ops-performance

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  db.py  gsheets.py  parity.md  pyproject.toml
adjustments/: README.md  __init__.py  manual.py  slots_faltantes_dime.csv
docs/: metrics_definitions.md  parity_build_plan.md  team_squad_mapping.md
docs/adjustments_docs/: README.md  ajustes_index.md  content_slas.md  correcciones_generales_datos.md
docs/metrics_data_docs/: README.md  adherent_time.md  content_csat.md  jobs_raw.md  jobs_within_sla.md  occupancy_time.md  quality_evaluations.md  shrinkage_slots.md  tnps_responses.md  wows.md
docs/metrics_docs/: README.md  adherence.md  average_xforce_index.md  average_xpeer_index.md  content_csat.md  content_sla_ntpj.md  improved_benchmarks.md  normalized_occupancy.md  normalized_time_per_job.md  ntpj.md  ntpj_xforce.md  nuvinhos_performance.md  performance_metrics.md  quality.md  shrinkage.md  tnps.md  wows.md  xforce_index.md  xpeer_index.md  xpeers_in_target.md
extractors/: agent_information.sql  content_csat.sql  dime_slots.sql  oos_jobs.sql  playvox_evaluations.sql  productivity.sql  shuffle_jobs.sql  sm_jobs.sql  sprinklr_sm_evaluations.sql  tnps_responses.sql  wows.sql
legacy/: AGENTS_LEGACY.md  CLAUDE.md  [IO] Adherence Dataset.sql  [IO] Data Checks.sql  [IO] NTPJ Dataset.sql  [IO] Normalized Occupancy Dataset.sql  [IO] Performance 2026 - Content Temp Fix.sql  [IO] Performance 2026 - Content.sql  [IO] Performance 2026 - Old.sql  [IO] Performance 2026 - S&D.sql  [IO] Performance 2026 - Social Media Temp Fix.sql  [IO] Performance 2026 - Social Media.sql  [IO] Performance 2026.sql  [IO] Quality Dataset.sql  [IO] Shrinkage Dataset.sql
metrics/: adherence.py  average_xforce_index.py  average_xpeer_index.py  content_csat_metric.py  content_sla_ntpj.py  improved_benchmarks.py  metric_utils.py  normalized_occupancy.py  ntpj.py  ntpj_xforce.py  nuvinhos_performance.py  performance_metrics.py  quality.py  shrinkage.py  tnps.py  wows_metric.py  xforce_index.py  xpeer_index.py  xpeers_in_target.py
metrics_data/: adherent_time.py  content_csat.py  dime_filters.py  jobs_raw.py  jobs_within_sla.py  occupancy_time.py  quality_evaluations.py  shift_attribution.py  shrinkage_slots.py  tnps_responses.py  wows.py
scripts/: check_extractor_data_quality.py
scripts/adhoc/: adherence_18_agents.py  (+2 more)
tests/: checks.py  conftest.py  test_checks.py  test_db_run_id.py  test_download_adjustments.py  test_gsheets.py  test_manual_adjustments.py  test_resolve_period_end.py
(+64 files in other folders)
